--- a/src/index.html
+++ b/src/index.html
@@ -155,6 +155,19 @@
       class="aside page__menu"
       id="menu"
     >
+      <div class="aside__top">
+        <a href="#" class="aside__logo-link">
+          <img
+          src="./images/logo/Air.png"
+          alt="Logo"
+          class="aside__logo">
+        </a>
+        <a
+          href="#"
+          class="aside__icon-close"
+        ></a>
+      </div>
+
       <nav class="aside__nav">
         <ul class="aside__list">
           <li class="aside__item">
@@ -192,10 +205,7 @@
         </ul>
       </nav>
 
-      <a
-        href="#"
-        class="aside__icon-close"
-      ></a>
+
     </aside>
 
     <main class="main">
